重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/cart.html
+++ b/Addons/Shop/View/default/User/cart.html
@@ -68,7 +68,7 @@
                                      src="{$vo.goods_data.cover|get_cover_url}" style="width: 80%; max-width: 80%"/>
                             </dt>
                             <dd class="operation-wrapper mui-pull-right">
-                                <p class="operation" id="{$goods.id}"><span class="mui-icon mui-icon-trash" style="color: #FF840D; font-size: 1.5rem; display: block"></span><span style="display: inline">删除</span></p>
+                                <p class="operation" id="{vo.id}"><span class="mui-icon mui-icon-trash" style="color: #FF840D; font-size: 1.5rem; display: block"></span><span style="display: inline">删除</span></p>
                             </dd>
                             <dd class="mui-media-body goods_desc">
                                 <div class="goods-title name">
@@ -107,10 +107,10 @@
         updatePriceAndCount();
     });
 
-    mui('.operation-wrapper').on('tap', 'p', function(){
+    mui('.operation-wrapper').on('click', 'p', function(){
         var goodsId = this.getAttribute('id');
         //addToCart(goodsId);
-        //if(confirm('确认要从购物车删除该水果吗？')){
+        if(confirm('确认要从购物车删除该水果吗？')){
 
             mui.ajax('index.php?s=/addon/Shop/User/delCart',{
                 data:{
@@ -132,8 +132,10 @@
                     console.log(type);
                 }
             });
-        //}
+        }
     });
+
+
 
     //删除沟通车的商品
     function deleteCartItem() {
