--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -1,187 +1,5 @@
 <include file="./Addons/Shop/View/default/User/_head.html"/>
-
 <link href="{:ADDON_PUBLIC_PATH}/user/css/iconfont.css?v={:SITE_VERSION}" rel="stylesheet" type="text/css">
-<style type="text/css">
-    .mui-table-view .mui-media {
-        padding: .3125rem 0.5rem;
-        position: relative;
-        overflow: hidden;
-        height: auto;
-        background: #f3f4f9;
-        margin: 0.25rem 0 0 0;
-        border-bottom: 0.1rem solid #d6d6db;
-        border-top: 0.1rem solid #fbfcfd;
-    }
-
-    .mui-table-view .mui-media-body {
-        padding: 0 .625rem;
-    }
-
-    .mui-table-view-cell:after {
-        left: 0.625rem;
-        background: transparent;
-    }
-
-    .mui-segmented-control .mui-control-item{
-        background-color: rgba(247,247,247,.8);
-        opacity: 1;
-    }
-
-    .mui-segmented-control.mui-segmented-control-inverted .mui-control-item.mui-active{
-        background-color: rgba(247,247,247,.8);
-        opacity: 1;
-    }
-
-    .mui-segmented-control.mui-scroll-wrapper .mui-control-item.mui-active {
-        color: #e74c3c;
-        font-weight: 700;
-        border-bottom: .125rem solid #e74c3c;
-    }
-
-    /*.mui-slider-indicator{
-        background: #0CE854;
-    }
-
-    .mui-bar{
-        background: #0CE854;
-    }
-
-    .mui-bar-tab .mui-tab-item{
-        color:#00375B;
-    }
-
-    .mui-bar-tab .mui-tab-item.mui-active{
-        color:#D90D0D;
-    }*/
-
-    .mui-segmented-control.mui-segmented-control-inverted .mui-control-item {
-        /*color: #0CE854;*/
-    }
-
-    .mui-table-view {
-        background: #e6e7ec;
-    }
-
-    .oblique-tag.oblique-tag-presell {
-        background: #FF6094;
-    }
-
-    .oblique-tag {
-        position: absolute;
-        top: 0;
-        left: 0;
-        display: inline-block;
-        color: #fff;
-        height: .75rem;
-        line-height: .8125rem;
-        width: 3.5rem;
-        font-size: .6875rem;
-        text-align: center;
-        vertical-align: baseline;
-        -webkit-transform: translate(-.6875rem, 1.9375rem) rotate(-45deg);
-        transform: translate(-.6875rem, 1.9375rem) rotate(-45deg);
-        -webkit-transform-origin: 0 0;
-        transform-origin: 0 0;
-    }
-
-    .goods-picture-wrapper {
-        position: relative;
-        overflow: hidden;
-        width: 5.625rem;
-        height: 5.625rem;
-    }
-
-    .mui-table-view .mui-media-object {
-        height: 5.625rem;
-        line-height: 5.625rem;
-    }
-
-    i {
-        margin: 0;
-        padding: 0;
-        border: 0;
-        font-weight: inherit;
-        font-style: inherit;
-        font-family: inherit;
-        font-size: 100%;
-        vertical-align: baseline;
-    }
-
-    .header-title-text {
-        padding: 0 0 0.375rem 0;
-    }
-
-
-
-    .banner-picture {
-        width: 100%;
-        padding: 0;
-        margin: 0;
-        overflow: hidden;
-    }
-
-    .banner-picture img {
-        width: 100%;
-        height: 9rem;
-    }
-
-    .goods-title {
-        font-weight: 700;
-        padding: 0;
-        font-size: 1rem;
-        color: #5a5959;
-        border-bottom: 0.1rem solid #e1e3ea;
-        line-height: 1.5rem;
-        width: 100%;
-    }
-
-    .goods-price {
-        color: #cc044d;
-        font-size: 1rem;
-        line-height: 2.5rem;
-        font-weight: 700;
-    }
-
-    .old-price {
-        color: #999;
-        font-size: 0.875rem;
-        line-height: 1rem;
-        margin-left: 0.375rem;
-        text-decoration: line-through;
-    }
-
-    .operation-wrapper{
-        border-left: 0.1rem solid #e1e3ea;
-        width: 4rem;
-        height: 5rem;
-        padding: 0;
-        margin: 0;
-        text-align: center;
-        vertical-align: middle;
-    }
-
-    .operation{
-        position: absolute;
-        width: 4rem;
-        top: 50%;
-        margin: -20px 0 0 0;
-        vertical-align: middle;
-    }
-
-    .mui-bar-tab .mui-tab-item .mui-icon~.mui-tab-label{
-        display: inline;
-    }
-
-    .my-basket{
-        background-color: #FF9900;
-        color:#FFF7EB
-    }
-
-    .one-key-pay{
-        background-color: #FF4683;
-        color:#FFF7EB
-    }
-</style>
 <body>
 <nav class="mui-bar mui-bar-tab">
     <a class="mui-tab-item mui-active" href="#" style="background-color: #F8FAFA">
@@ -273,7 +91,7 @@
 <script type="text/javascript" src="{:ADDON_PUBLIC_PATH}/user/js/mui.pullToRefresh.js?v={:SITE_VERSION}"></script>
 <script type="text/javascript"
         src="{:ADDON_PUBLIC_PATH}/user/js/mui.pullToRefresh.material.js?v={:SITE_VERSION}"></script>-->
-<script>
+<script type="text/javascript">
     mui.init();
 
     (function ($) {
