--- a/Addons/Shop/View/default/User/confirmOrder.html
+++ b/Addons/Shop/View/default/User/confirmOrder.html
@@ -23,7 +23,7 @@
                 <dl class="goods_item" style="margin:0">
                     <dt class="goods-picture-wrapper mui-pull-left">
                         <img class="mui-media-object goods_img"
-                             src="{$vo.goods_data.cover|get_cover_url}" style="width: 80%; max-width: 80%"/>
+                             src="{$vo.cover|get_cover_url}" style="width: 80%; max-width: 80%"/>
                     </dt>
                     <dd class="mui-media-body goods_desc">
                         <div class="goods-title name">
