重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/confirmOrder.html
+++ b/Addons/Shop/View/default/User/confirmOrder.html
@@ -8,11 +8,11 @@
 
         <span class="mui-tab-label">实付款:</span><span class="goods-price">￥<span id="totalPrice">{$total_price|wp_money_format}</span></span>
     </div>
-    <div class="mui-tab-item one-key-pay">
-        <button class="settlement" type="submit" style="background: transparent; border: 0; color: #F8FAFA">提交订单</button>
+    <div class="mui-tab-item one-key-pay" id="submitOrderTab">
+        <span class="settlement" style="background: transparent; border: 0; color: #F8FAFA">提交订单</span>
     </div>
 </nav>
-<div class="mui-bar mui-bar-nav" id="submitOrderTab">
+<div class="mui-bar mui-bar-nav">
     <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
     <h1 class="mui-title">确认订单</h1>
 </div>
