重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/confirmOrder.html
+++ b/Addons/Shop/View/default/User/confirmOrder.html
@@ -51,7 +51,7 @@
     mui.init();
 
     var submitOrderTab = document.getElementById("submitOrderTab");
-    submitOrderTab.addEventListener("tap", function(){
+    submitOrderTab.addEventListener("click", function(){
         /*var address_id = $('#address_id').val();
          if (address_id == '') {
          $.Dialog.fail("请选择收货地址");
