重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/cart.html
+++ b/Addons/Shop/View/default/User/cart.html
@@ -116,7 +116,7 @@
     mui('.operation-wrapper').on('tap', 'p', deleteGoods);
 
     var goToConfirmOrderTab = document.getElementById("goToConfirmOrderTab");
-    goToConfirmOrderTab.addEventListener("tap", function(){
+    goToConfirmOrderTab.addEventListener("click", function(){
         document.getElementById("orderForm").submit();
     });
 
