重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -22,8 +22,8 @@
              class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
             <div class="mui-scroll" style="-webkit-transform: translate3d(0px, 0px, 0px) translateZ(0px); width: 100%">
                 <a class="mui-control-item mui-active" style="width: 50%" href="#itemJingPin"><span
-                        class="header-title-text">精品折扣</span></a>
-                <a class="mui-control-item" style="width: 50%" href="#itemChangXiao"><span class="header-title-text">畅销分类</span></a>
+                        class="header-title-text">好之鲜水果超市</span></a>
+                <!--<a class="mui-control-item" style="width: 50%" href="#itemChangXiao"><span class="header-title-text">畅销分类</span></a>-->
             </div>
         </div>
         <div class="mui-slider-group" style="-webkit-transform: translate3d(0px, 0px, 0px) translateZ(0px);">
@@ -71,14 +71,14 @@
                     </div>
                 </div>
             </div>
-            <div id="itemChangXiao" class="mui-slider-item mui-control-content">
+            <!--<div id="itemChangXiao" class="mui-slider-item mui-control-content">
                 <div id="scrollChangXiao" class="mui-scroll-wrapper">
                     <div class="mui-scroll"
                          style="-webkit-transform: translate3d(0px, 0px, 0px) translateZ(0px);">
                         畅销分类
                     </div>
                 </div>
-            </div>
+            </div>-->
         </div>
     </div>
 </div>
