重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/payFeedback.html
+++ b/Addons/Shop/View/default/User/payFeedback.html
@@ -12,8 +12,8 @@
 
     <h1 class="mui-title">好之鲜水果超市</h1>
 </div>
-<div class="mui-card">
-    {$feedback}
+<div class="mui-card" style="margin-top: 5rem">
+    您已成功预定，请于明日中午12点前到一食堂三楼好之味餐厅领取。{$feedback}
 </div>
 </body>
 </html>
