--- a/Addons/Shop/View/default/User/payFeedback.html
+++ b/Addons/Shop/View/default/User/payFeedback.html
@@ -1,13 +1,13 @@
 <include file="./Addons/Shop/View/default/User/_head.html"/>
 <link href="{:ADDON_PUBLIC_PATH}/user/css/iconfont.css?v={:SITE_VERSION}" rel="stylesheet" type="text/css">
 <body>
-<nav class="mui-bar mui-bar-tab">
-    <a class="mui-tab-item mui-active" href="#" style="background-color: #F8FAFA">
+<nav class="mui-bar mui-bar-tab" id="goHomeTab">
+    <a class="mui-tab-item mui-active" href="{:addons_url('Shop://User/index')}" style="background-color: #F8FAFA">
         <span class="mui-icon mui-icon-person"></span>
         <span class="mui-tab-label">返回果园</span>
     </a>
 </nav>
-<div class="mui-bar mui-bar-nav" id="goHomeTab">
+<div class="mui-bar mui-bar-nav">
     <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 
     <h1 class="mui-title">好之鲜水果超市</h1>
