重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/payFeedback.html
+++ b/Addons/Shop/View/default/User/payFeedback.html
@@ -22,7 +22,7 @@
 <script type="text/javascript">
     mui.init();
     var goHomeTab = document.getElementById("goHomeTab");
-    goHomeTab.addEventListener("click", function(){
+    goHomeTab.addEventListener("tap", function(){
         window.location.assign("{:addons_url('Shop://User/index')}");
     });
 </script>
