重构用户Mobile端页面及逻辑

--- a/Application/Home/View/default/Addons/lists.html
+++ b/Application/Home/View/default/Addons/lists.html
@@ -76,7 +76,7 @@
                                             <span>{$vo.title}：</span>
                                             <volist name='vo.options' id='option'>
                                                 <input type="checkbox" name="{$option.name}" class=""
-                                                       value="{$option.value}"
+                                                       value="{$option.value}">
                                                 <eq name='option.default_value' value='option.value'>checked</eq>
                                                 >{$option.title}
                                             </volist>
@@ -85,7 +85,7 @@
                                             <span>{$vo.title}：</span>
                                             <volist name='vo.options' id='option'>
                                                 <input type="radio" name="{$option.name}" class=""
-                                                       value="{$option.value}"
+                                                       value="{$option.value}">
                                                 <eq name='option.default_value' value='option.value'>checked</eq>
                                                 >{$option.title}
                                             </volist>
