重构用户Mobile端页面及逻辑

--- a/Application/Home/View/default/Addons/lists.html
+++ b/Application/Home/View/default/Addons/lists.html
@@ -3,7 +3,7 @@
     <div class="span9 page_message">
         <section id="contents">
             <include file="Addons/_nav"/>
-            <if condition="$add_button || $del_button || $search_button || !empty($top_more_button) || !empty('muti_search')">
+            <if condition="$add_button || $del_button || $search_button || !empty($top_more_button) || !empty($muti_search)">
                 <div class="table-bar">
                     <div class="fl">
                         <empty name="model.extend">
